ui_test/parser/fail/unexpected_attr.camp
#[hello = "world"]
pub use foo;