ui_test/parser/fail/unexpected_attr.err
error: Attribute `hello` not expected here
  ┌─ $DIR/unexpected_attr.camp:1:1
  │
1 │ #[hello = "world"]
  │ ^^^^^^^^^^^^^^^^^^

